--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,11 @@
 		<java.version>1.8</java.version>
 		<opencsv.version>4.6</opencsv.version>
 		<asynchttpclient.version>2.8.1</asynchttpclient.version>
+		<org.mybatis.spring.boot.version>1.2.0</org.mybatis.spring.boot.version>
+		<org.mybatis.generator.version>1.3.2</org.mybatis.generator.version>
+		<commons-dbcp.version>1.4</commons-dbcp.version>
+		<mybatis-spring-boot-starter-test.version>1.3.2</mybatis-spring-boot-starter-test.version>
+		
 	</properties>
 
 	<dependencies>
@@ -39,8 +44,31 @@
 		    <artifactId>async-http-client</artifactId>
 		    <version>${asynchttpclient.version}</version>
 		</dependency>
+		
+     	<dependency>
+         	<groupId>org.mybatis.spring.boot</groupId>
+        	<artifactId>mybatis-spring-boot-starter</artifactId>
+        	<version>${org.mybatis.spring.boot.version}</version>
+      	</dependency>		
+      	
+      	<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<dependency>
+		    <groupId>mysql</groupId>
+		    <artifactId>mysql-connector-java</artifactId>
+		</dependency>
+		
+		<dependency>
+    		<groupId>commons-dbcp</groupId>
+    		<artifactId>commons-dbcp</artifactId>
+    		<version>${commons-dbcp.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.mybatis.spring.boot</groupId>
+    		<artifactId>mybatis-spring-boot-starter-test</artifactId>
+   			<version>${mybatis-spring-boot-starter-test.version}</version>
+		</dependency>
 	
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -48,7 +76,6 @@
 		</dependency>
 	</dependencies>
 		
-
 	<build>
 		<plugins>
 			<plugin>
@@ -56,6 +83,36 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.mybatis.generator</groupId>
+	   				<artifactId>mybatis-generator-maven-plugin</artifactId>
+	   				<version>${org.mybatis.generator.version}</version>
+	   				<configuration>
+	       				<configurationFile>src/main/resources/mybatis-generator/generatorConfig.xml</configurationFile>
+	      				  <verbose>true</verbose>
+	     				  <overwrite>true</overwrite>
+	   				</configuration> 
+	   				<executions>
+	       				<execution>
+	         			<id>Generate MyBatis Artifacts</id>
+	          			<goals>
+	           				<goal>generate</goal>
+	         			</goals>
+	       				</execution>
+	   				 </executions>
+	   				 
+	   				 <dependencies>
+	       				<dependency>
+	          				<groupId>org.mybatis.generator</groupId>
+	           				<artifactId>mybatis-generator-core</artifactId>
+	           				<version>${org.mybatis.generator.version}</version>
+	        			</dependency>
+	    			</dependencies>
+				</plugin>
+			</plugins>
+		</pluginManagement>		
 	</build>
 
 </project>
